Change rows to posts

--- a/tuning-in/index.html
+++ b/tuning-in/index.html
@@ -46,10 +46,10 @@
       </nav>
 
       <main>
-         <ol id='rows'>
-            <li class='row'>
                <h1 id='tab-title'>
                   <span>[</span> tuning in <span>]</span>
+         <ol id='posts'>
+            <li class='post'>
                </h1>
             </li>
          </ol>
