--- a/comments/index.html
+++ b/comments/index.html
@@ -46,10 +46,10 @@
       </nav>
 
       <main>
-         <ol id='rows'>
-            <li class='row'>
                <h1 id='tab-title'>
                   <span>//</span> comments
+         <ol id='posts'>
+            <li class='post'>
                </h1>
             </li>
          </ol>
