Add testing markup

--- a/tuning-in/index.html
+++ b/tuning-in/index.html
@@ -46,11 +46,23 @@
       </nav>
 
       <main>
-               <h1 id='tab-title'>
-                  <span>[</span> tuning in <span>]</span>
+         <h1 id='tab-title'>
+            <span>[</span> tuning in <span>]</span>
+         </h1>
          <ol id='posts'>
             <li class='post'>
+               <h1>
+                  this is a test post
                </h1>
+               <p>
+                  Here's some test text, entirely for the sake of being
+                  boring.
+               </p>
+               <p>
+                  <a href='http://timglorioso.com'>
+                     (This is a test.)
+                  </a>
+               </p>
             </li>
          </ol>
       </main>
