Edit landing page content

--- a/index.html
+++ b/index.html
@@ -47,30 +47,27 @@
             two is especially tantalizing.
          </p>
          <p>
-            Thanks for stopping by!
+            Enjoy your visit!
          </p>
          <h2>
-            Links
+            Made Possible By:
          </h2>
          <ul>
             <li>
-               <a href='https://github.com/timglorioso'>Github</a>
+               <a href='https://atom.io'>Atom</a>, an awesome code editor
             </li>
-            <!-- Dribbble?? -->
+            <li>
+               <a href='https://01.org/clear-sans'>Clear Sans</a>, a sweet font
+            </li>
+            <li>
+               <a href='https://inkscape.org/en'>Inkscape</a>, a cool SVG editor
+            </li>
+            <li>
+               <a href='http://sass-lang.com'>Sass</a>, a handy CSS preprocessor
+            </li>
          </ul>
-         <h2>
-            Credits
-         </h2>
          <p>
-            I did the designing and coding.
-            Using the
-            <a href='http://www.fontsquirrel.com/tools/webfont-generator'>
-            Font Squirrel Webfont Generator</a>, I subsetted
-            <a href='https://01.org/clear-sans'>Clear Sans</a>, a
-            neat font provided by Intel under the
-            <a href='http://www.apache.org/licenses/LICENSE-2.0'>Apache License
-            2.0</a>.
-         </p>
+            All these things are free and open source. Thanks, everyone!
       </main>
 
    </body>
