Make tool links open in new window/tab

--- a/index.html
+++ b/index.html
@@ -54,16 +54,20 @@
          </h2>
          <ul>
             <li>
-               <a href='https://atom.io'>Atom</a>, an awesome code editor
+               <a href='https://atom.io' target='_blank'>Atom</a>, an awesome
+               code editor
             </li>
             <li>
-               <a href='https://01.org/clear-sans'>Clear Sans</a>, a sweet font
+               <a href='https://01.org/clear-sans' target='_blank'>Clear
+               Sans</a>, a sweet font
             </li>
             <li>
-               <a href='https://inkscape.org/en'>Inkscape</a>, a cool SVG editor
+               <a href='https://inkscape.org/en' target='_blank'>Inkscape</a>,
+               a cool SVG editor
             </li>
             <li>
-               <a href='http://sass-lang.com'>Sass</a>, a handy CSS preprocessor
+               <a href='http://sass-lang.com' target='_blank'>Sass</a>, a handy
+               CSS preprocessor
             </li>
          </ul>
          <p>
