Edit landing page content

--- a/index.html
+++ b/index.html
@@ -44,34 +44,20 @@
          </h1>
          <p>
             I'm Tim Glorioso. I like design and technology. A mixture of the
-            two is especially tantalizing.
+            two is especially tantalizing. Feel free to shoot me an
+            <a href='mailto:glorioso.tim@gmail.com'>email</a>.
          </p>
+         <hr>
          <p>
-            Enjoy your visit!
+            This website was created with the help of
+            <a href='https://atom.io' target='_blank'>Atom</a>,
+            <a href='https://01.org/clear-sans' target='_blank'>Clear Sans</a>,
+            <a href='https://inkscape.org/en' target='_blank'>Inkscape</a>,
+            and
+            <a href='http://sass-lang.com' target='_blank'>Sass</a>,
+            all of which are free and open source. Many thanks to their
+            contributors!
          </p>
-         <h2>
-            Made Possible By:
-         </h2>
-         <ul>
-            <li>
-               <a href='https://atom.io' target='_blank'>Atom</a>, an awesome
-               code editor
-            </li>
-            <li>
-               <a href='https://01.org/clear-sans' target='_blank'>Clear
-               Sans</a>, a sweet font
-            </li>
-            <li>
-               <a href='https://inkscape.org/en' target='_blank'>Inkscape</a>,
-               a cool SVG editor
-            </li>
-            <li>
-               <a href='http://sass-lang.com' target='_blank'>Sass</a>, a handy
-               CSS preprocessor
-            </li>
-         </ul>
-         <p>
-            All these things are free and open source. Thanks, everyone!
       </main>
 
    </body>
