Implement updated markup structure

--- a/index.html
+++ b/index.html
@@ -12,52 +12,30 @@
          Tim Glorioso
       </title>
 
-      <link href='http://timglorioso.com/assets/styles/normalize.css'
-            rel='stylesheet'>
-      <link href='http://timglorioso.com/assets/styles/base.css'
-            rel='stylesheet'>
-      <link href='http://timglorioso.com/assets/styles/viewports.css'
-            rel='stylesheet'>
-      <link href='http://timglorioso.com/assets/images/sq.png'
-            rel='shortcut icon' type='image/png'>
+      <link href='assets/styles/normalize.css' rel='stylesheet'>
+      <link href='assets/styles/base.css' rel='stylesheet'>
+      <link href='assets/styles/viewports.css' rel='stylesheet'>
+      <link href='assets/images/sq.png' rel='shortcut icon' type='image/png'>
 
    </head>
 
    <body>
 
-      <nav>
-         <a id='logo' href='http://timglorioso.com'>
-            <img src='http://timglorioso.com/assets/images/tg-lower-sq.svg'
-                 alt='TG'>
-         </a>
-         <a href='http://timglorioso.com/blog'>
-            Blog
-         </a>
-         <a href='http://timglorioso.com/stuff'>
-            Stuff
-         </a>
-      </nav>
+      <header>
+         <img id='logo' src='assets/images/tg-tp-0ef.svg' alt='TG'>
+         <nav>
+            <a class='current' href='index.html'>
+               Blog
+            </a><a href='stuff/index.html'>
+               Stuff
+            </a><a href='about/index.html'>
+               About
+            </a>
+         </nav>
+      </header>
 
       <main>
-         <h1>
-            Hello.
-         </h1>
-         <p>
-            I'm Tim Glorioso. I like design and technology. A mixture of the
-            two is especially tantalizing. Feel free to shoot me an
-            <a href='mailto:glorioso.tim@gmail.com'>email</a>.
-         </p>
-         <hr>
-         <p>
-            This website was created with the help of
-            <a href='https://atom.io' target='_blank'>Atom</a>,
-            <a href='https://01.org/clear-sans' target='_blank'>Clear Sans</a>,
-            <a href='https://inkscape.org/en' target='_blank'>Inkscape</a>,
-            and
-            <a href='http://sass-lang.com' target='_blank'>Sass</a>,
-            all of which are free and open source. Many thanks to their
-            contributors!
-         </p>
+
       </main>
 
    </body>
