Use remote URLs

--- a/about/index.html
+++ b/about/index.html
@@ -12,23 +12,23 @@
          Tim Glorioso
       </title>
 
-      <link href='../assets/styles/normalize.css' rel='stylesheet'>
-      <link href='../assets/styles/base.css' rel='stylesheet'>
-      <link href='../assets/styles/viewports.css' rel='stylesheet'>
-      <link href='../assets/images/sq.png' rel='shortcut icon' type='image/png'>
+      <link href='http://assets.timglorioso.com/styles/normalize.css' rel='stylesheet'>
+      <link href='http://assets.timglorioso.com/styles/base.css' rel='stylesheet'>
+      <link href='http://assets.timglorioso.com/styles/viewports.css' rel='stylesheet'>
+      <link href='http://assets.timglorioso.com/images/sq.png' rel='shortcut icon' type='image/png'>
 
    </head>
 
    <body>
 
       <header>
-         <img id='logo' src='../assets/images/tg-tp-0ef.svg' alt='TG'>
+         <img id='logo' src='http://assets.timglorioso.com/images/tg-tp-0ef.svg' alt='TG'>
          <nav>
-            <a href='../index.html'>
+            <a href='http://timglorioso.com'>
                Blog
-            </a><a href='../stuff/index.html'>
+            </a><!--<a href='http://timglorioso.com/stuff'>
                Stuff
-            </a><a class='current' href='index.html'>
+            </a>--><a class='current' href=''>
                About
             </a>
          </nav>
