Make little fixes
Links, logo alt text, sass file comments

--- a/about/index.html
+++ b/about/index.html
@@ -22,13 +22,13 @@
    <body>
 
       <header>
-         <img id='logo' src='http://assets.timglorioso.com/images/tg-tp-0ef.svg' alt='TG'>
+         <img id='logo' src='http://assets.timglorioso.com/images/tg-tp-0ef.svg' alt='tg'>
          <nav>
             <a href='http://timglorioso.com'>
                Blog
             </a><!--<a href='http://timglorioso.com/stuff'>
                Stuff
-            </a>--><a class='current' href=''>
+            </a>--><a class='current' href='http://timglorioso.com/about'>
                About
             </a>
          </nav>
