--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
    <body>
 
       <header>
-         <img id='logo' src='http://assets.timglorioso.com/images/tg-tp-0ef.svg' alt='TG'>
+         <img id='logo' src='http://assets.timglorioso.com/images/tg-tp-0ef.svg' alt='tg'>
          <nav>
-            <a class='current' href=''>
+            <a class='current' href='http://timglorioso.com'>
                Blog
             </a><!--<a href='http://timglorioso.com/stuff'>
                Stuff
