--- a/stuff/index.html
+++ b/stuff/index.html
@@ -22,11 +22,11 @@
    <body>
 
       <header>
-         <img id='logo' src='http://assets.timglorioso.com/images/tg-tp-0ef.svg' alt='TG'>
+         <img id='logo' src='http://assets.timglorioso.com/images/tg-tp-0ef.svg' alt='tg'>
          <nav>
             <a href='http://timglorioso.com'>
                Blog
-            </a><a class='current' href=''>
+            </a><a class='current' href='http://timglorioso.com/stuff'>
                Stuff
             </a><a href='http://timglorioso.com/about'>
                About
