Adjust Tumblr templates, about page content

--- a/about/index.html
+++ b/about/index.html
@@ -36,17 +36,17 @@
 
       <main>
 
-         <h1>
+         <h1 class='post-title'>
             Hello.
          </h1>
          <p>
             I'm Tim Glorioso. I like design and technology. A mixture of the
-            two is especially tantalizing. Feel free to shoot me an
-            <a href='mailto:glorioso.tim@gmail.com'>email</a>.
+            two is especially tantalizing. Feel free to
+            <a href='mailto:glorioso.tim@gmail.com'>email me</a>.
          </p>
          <hr>
          <p>
-            This website was created with the help of
+            Powered by Tumblr. Hand-crafted with the help of
             <a href='https://atom.io' target='_blank'>Atom</a>,
             <a href='https://01.org/clear-sans' target='_blank'>Clear Sans</a>,
             <a href='https://inkscape.org/en' target='_blank'>Inkscape</a>,
